<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.habitsetup.HabitSetupFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/imageHabit"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/habit" />

                <EditText
                    android:id="@+id/text_habit_setup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/enter_a_habit_name"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/imageLoc"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/location" />

                <EditText
                    android:id="@+id/text_habit_setup_location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/enter_a_name_for_the_location_of_this_habit"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
            </TableRow>


            <Switch
                android:id="@+id/switch_enable_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/enable_gps_verification"
                android:textSize="15sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/imageAddr"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/address" />

                <EditText
                    android:id="@+id/text_habit_setup_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/enter_a_valid_address_if_using_gps"
                    android:inputType="textPostalAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/imageDays"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/day" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/select_the_days_when_this_habit_occurs"
                    android:textSize="18sp" />
            </TableRow>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_mon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/monday" />

                    <CheckBox
                        android:id="@+id/check_tues"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/tuesday" />

                    <CheckBox
                        android:id="@+id/check_wed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/wednesday" />

                    <CheckBox
                        android:id="@+id/check_thurs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/thursday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/check_fri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/friday" />

                    <CheckBox
                        android:id="@+id/check_sat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/saturday" />

                    <CheckBox
                        android:id="@+id/check_sun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/sunday" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageTime"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp">>

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/select_start_time"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/text_habit_setup_start_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/time_array" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/select_end_time"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/text_habit_setup_end_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/time_array" />
                    </TableRow>
                </LinearLayout>


            </LinearLayout>

            <Switch
                android:id="@+id/switch_continuous_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/continuous_habit"
                android:textSize="15sp" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/imageOccur"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_margin="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/calendar" />

                <EditText
                    android:id="@+id/text_habit_setup_bound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:hint="@string/number_of_occurrences_if_not_continuous"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="16sp" />
            </TableRow>

            <Button
                android:id="@+id/button_create_habit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_gravity="center_horizontal"
                android:background = "@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:text="@string/create_habit" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>